--- a/eloszo.tex
+++ b/eloszo.tex
@@ -69,14 +69,16 @@ https://swish.swi-prolog.org/} ahol a szabályok mindig automatikusan
 újraolvasódnak.
 
 \section*{Források}
-Ezt a könyvet eredetileg azzal a céllal kezdtem el, hogy az egyik
-kedvenc programozásról szóló könyvemet~[1] elérhetőbbé és köny-nyebben
+Amikor elkezdtem ezeket a leckéket írni (eredetileg a honlapomra
+feltéve, blogposzt-jellegűen), a célom csak az volt, hogy az egyik
+kedvenc programozásról szóló könyvemet~[1] elérhetőbbé és könnyebben
 emészthetővé tegyem a magyar laikus közönség számára. Ez aztán végül
-egy Prolog tankönyvvé vált, de a leckék -- helyenként jelentősen
-átdolgozva -- az eredetit követik. Egészen pontosan az 1.~lecke az
-1.1--3 és 1.8, a 2.~lecke a 2.1--6, a 3.~lecke a 3.1--2, a 4.~lecke a
-3.3--4, az 5.~lecke az 5.1--4 és 9.1, a 6.~lecke pedig a 6.1--6 és 8.5
-fejezeteknek felel meg.
+egy Prolog tankönyvvé vált, de a leckék -- sokszor jelentősen
+átdolgozva, de néhol szinte szó szerint -- az eredetit
+követik. Egészen pontosan az 1.~lecke az 1.1--3 és 1.8, a 2.~lecke a
+2.1--6, a 3.~lecke a 3.1--2, a 4.~lecke a 3.3--4, az 5.~lecke az
+5.1--4 és 9.1, a 6.~lecke pedig a 6.1--6 és 8.5 fejezeteknek felel
+meg.
 
 Egy másik fontos forrás egy klasszikus Prolog tankönyv~[2]; ebből
 származik az 5.~lecke összefésüléses példája (11.~fejezet), a
